# TheFromAI-server

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
assets/: input_dummy.json  llm_assets.py
assets/.ipynb_checkpoints/: llm_assets-checkpoint.py
notebooks/: WorkFlow.ipynb
utils/: model_utils.py
utils/.ipynb_checkpoints/: model_utils-checkpoint.py
